# ativos_imagens

./: .gitignore  AGENTS.md  CLAUDE.md  COMO_EXECUTAR.md  DOCUMENTACAO_SISTEMA_ADK.md  GEMINI.md  README.md  ids_ativos_analisados.txt  mascot_breathing.json  mascot_breathing.lottie  migrate_checklist_to_json.py  prompts_achievement_badges.md  pyproject.toml  requirements.txt  revisor_meia_porcao.py  revisor_prompts.py  startup.sh  test_isolated_bg_removal.py  test_json_integration.py  test_mascot_animation.py  test_multi_agent.py  test_new_pipeline.py  test_update_checklist.py
.cursor/rules/: orquestrador_tarefas.mdc  revisor_agente.mdc
.venv312/: pyvenv.cfg
ativos_imagens/: AGENTS.md  README_ESTRUTURA.md  __init__.py  agent.py  evalsetb0cf9a.evalset.json  sync_inventory.py
ativos_imagens/agente_antigo/: __init__.py  agent.py  agent_minimal.py
ativos_imagens/agentes_ativos/: __init__.py  asset_creator.py  asset_validator.py  orchestrator.py
ativos_imagens/geracao_manual/: README.md  gerador_manual.py  validar_json.py
ativos_imagens/tools/: __init__.py  (+7 more)
backup/: claudeMDbackup.md
docs/: ANALISE_DEEP_RESEARCH_LOTTIE.md  ESTADO_ATUAL_PROJETO.md  MIGRACAO_MULTI_AGENTE.md  PLANO_DETALHADO_MODIFICACOES.md  RESUMO_IMPLEMENTACAO.md
resultados_otimizacao_prompts/: prompts_otimizados1.json  prompts_otimizados1_en.json
test_trace_output/: mascot_trace.lottie
tests/: test_agent.py  test_audio_generation.py  test_mascot_animation.py  test_pipeline_mascote.py  test_single_frame_vectorization.py  test_svg_system.py  test_trace_pipeline.py  test_vectorization_keep.py
(+53 files in other folders)
